# hapticomm-efficacy-psychophysics

./: .gitignore  README.md  backuptraining.py  hapticomm-efficacy_main.py  hapticomm-efficacy_training.py  hapticomm-number_main.py  hapticomm-number_training.py  sandbox.py  sandbox_backup.py
analysis/: README.md  backupR.R  example_anovas.py  example_anovas_start.py  functions_local.py  get_anova_posthoc.R  main.R  main.py
analysis/data/: P01.csv  P02.csv  P03.csv  P04.csv  P05.csv  P06.csv  P07.csv  P08.csv  P09.csv  P10.csv
data/: .gitignore
data/P00/: 2022-07-31_14-07-27_hapticomm-efficacy-psychophysics_P00_log.csv  2022-07-31_14-07-27_hapticomm-efficacy-psychophysics_P00_stimuli.csv  2022-07-31_14-08-33_hapticomm-efficacy-psychophysics_P00_log.csv  2022-07-31_14-08-33_hapticomm-efficacy-psychophysics_P00_stimuli.csv  2022-07-31_14-10-16_hapticomm-efficacy-psychophysics_P00_log.csv  2022-07-31_14-10-16_hapticomm-efficacy-psychophysics_P00_stimuli.csv  2023-04-03_18-42-24_hapticomm-efficacy-psychophysics_P00_stimuli.csv  2023-04-03_18-46-50_hapticomm-efficacy-psychophysics_P00_log.csv  2023-04-03_18-46-50_hapticomm-efficacy-psychophysics_P00_stimuli.csv
data/P01/: 2022-07-27_14-23-45_hapticomm-efficacy-psychophysics_P01_log.csv  2022-07-27_14-23-45_hapticomm-efficacy-psychophysics_P01_stimuli.csv  (+13 more)
hapticommlib/: README.md  configure.sh
hapticommlib/0_executables/neutral/: CMakeLists.txt
include/: actuators_info.py  asasddqwd  backupå
modules/: file_management.py  hapticomm_communication.py  stimuli.py
sandbox/: demo.py
(+29 files in other folders)
